<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/account_chip_bg"
        android:orientation="horizontal"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/account_picture"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="false"
            android:contentDescription="dddd"
            android:scaleType="fitCenter"
            android:src="@drawable/user_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nombre_chofer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ruc_cooperativa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:id="@+id/nombre_cooperativa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_transporte"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/marca_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:id="@+id/numero_unidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/bienvenido"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/cargar_pasajeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/cargar_pasajeros" />

    <Button
        android:id="@+id/continuar_cargando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/continuar_cargando"
        android:visibility="invisible" />

    <Button
        android:id="@+id/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/salir" />

</LinearLayout>