<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/main_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/main_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="@drawable/account_chip_bg"
                android:orientation="horizontal"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/account_picture"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="dddd"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bus" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/nombre_cooperativa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/secondary_text_light"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nombre_chofer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/primary_text_light" />

                    <TextView
                        android:id="@+id/numero_unidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/secondary_text_light" />

                    <TextView
                        android:id="@+id/ruta_bus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/primary_text_light"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/hora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/secondary_text_light" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/account_chip_bg"
                android:padding="8dp" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/barcode_value"
                        android:hint="@string/cedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nombres"
                        android:hint="@string/nombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="16dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/apellidos"
                        android:hint="@string/apellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="16dp" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="3dp" >

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/use_flash"
                        android:id="@+id/use_flash"
                        android:checked="false" />

                    <Button
                        android:id="@+id/read_barcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@android:drawable/ic_menu_camera"
                        android:text="@string/escanear_cedula" />
                </LinearLayout>

                <Button
                    android:id="@+id/guardar_pasajero_lista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@android:drawable/ic_menu_save"
                    android:text="@string/guardar_pasajero_bus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/account_chip_bg"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/total_pasajeros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_pasajeros"
                    android:textColor="@android:color/secondary_text_light"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <Button
                        android:id="@+id/pausar_lista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@android:color/holo_red_dark"
                        android:drawableLeft="@android:drawable/ic_media_pause"
                        android:padding="3dp"
                        android:text="@string/pausar_carga"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/cerrar_lista"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@android:color/holo_green_dark"
                        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                        android:padding="3dp"
                        android:text="@string/cerrar_lista"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>